--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
+    "firebase": "^10.1.0",
     "react-bootstrap": "^2.8.0",
     "react-router-dom": "^6.15.0"
   }
